# tk_omdb

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/: api.py  omdb.py
