[project]
name = "tk-omdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "flake8>=7.1.2",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
